模版方法实现和完善